# c_emb_lua

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.cmd  cemblua.pro  make_app.cmd  make_test.cmd  proc_idl.lua  run.cmd  run_app.cmd  run_test.cmd  test.cmd
lua-5.3.5/: lauxlib.c
lua_app/: demo_app.lua  utils.lua
source/: board.c  board.h  c2lua.c  c2lua.h  callcfromlua.c  callcfromlua.h  callluafromc.c  callluafromc.h  common.c  common.h  ctolua.c  ctolua.h  demo_app.lua  demoapp.lua  demolib.c  demolib.h  exec.c  exec.h  lua2c.c  lua2c.h  luaex.h  luainterop.c  luainterop.h  luatoc.c  luatoc.h  luautils.h  main.c  stringx.c  stringx.h  utils.lua  xlat.c  xlat.h
source/board_module/: board_module.h
source/board_module/private/: board_module.c
source/c/: board.c  board.h  common.c  common.h  exec.c  interop.c  interop.h  logger.c  logger.h  luaex.c  luainterop.c  luainterop.h  luautils.c  luautils.h  main.c
source/common_module/: common_defs.h  common_module.h
source/common_module/private/: common_module.c
source/exec_module/: exec_module.h
source/exec_module/private/: exec_module.c
source/lua/: demoapp.lua  utils.lua
source/private/: luautils.c
source/xlat_module/: xlat_module.h
source/xlat_module/private/: xlat_module.c  xlat_utils.c  xlat_utils.h
source_code/: demoapp.lua  exec.c  interop.c
test/: board.c  board.h  common.c  common.h  demoapp.lua  exec.c  genex.c  genex.h  genex.idl  genex.lua  genned.c  genned.h  genned.lua  interop.c  interop.h  logger.h  main.c  utils.lua
test_code/: common.h  interop.h
